# SpectraLM

./: .gitignore  README.md  RESEARCH_WORKFLOW.md  pyproject.toml  requirements.txt
configs/: eval_image_only.yaml  eval_image_table.yaml  eval_image_table_rule.yaml  eval_pilot.yaml  eval_table_only.yaml  fingerprint.yaml  inference.yaml  inference_pilot_jsonl.yaml  predict_image_only.yaml  predict_image_table.yaml  predict_image_table_rule.yaml  predict_table_only.yaml  preprocess.yaml  sample.yaml  sample_500_100.yaml  split.yaml  train.yaml  train_cuda_48g_jsonl.yaml  train_cuda_48g_no_formula.yaml  train_cuda_48g_smoke.yaml  train_pilot.yaml  train_pilot_jsonl.yaml  train_pilot_jsonl_dryrun.yaml  train_smoke.yaml  visualize_selection.yaml
docs/: experiments.md  experiments_50k.md  nmr_1d_rulebook.md  research_design.md
img/: render_demo_manifest.json
paper/: make_figures.py  neurips_2025.aux  neurips_2025.fdb_latexmk  neurips_2025.fls  neurips_2025.tex  spectralm_nmr_llm.aux  spectralm_nmr_llm.out  spectralm_nmr_llm.tex
rules/: nmr_1d.yaml
script/: audit_dataset.py  build_candidate_sidecar.py  build_full_jsonl.sh  build_manifest.py  build_paired_jsonl.py  curate_jsonl_subsets.py  pre_render_jsonl_images.py  run_50k_experiment.sh  run_experiment.sh  run_featurize.py  run_preprocess.py  run_sample.py  run_train_cuda_48g.sh
src/: __init__.py  config.py  dataset.py  io.py  logger.py  preprocess.ipynb  preprocess.py  sample_splits.py  spectra.py  split_quality.py  train.py  utils.py  visual.py
tests/: conftest.py  test_auxiliary_tasks.py  test_dataset.py  (+29 more)
(+119 files in other folders)
