[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectralm"
version = "0.1.0"
description = "Multimodal NMR spectrum reasoning and molecular structure prediction toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "Pillow",
    "selfies",
    "rdkit",
    "PyYAML",
    "tqdm",
]

[project.optional-dependencies]
train = [
    "torch",
    "transformers",
    "trl",
    "unsloth",
]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
spectralm-preprocess = "spectralm.data.preprocessing:main"
spectralm-fingerprint = "spectralm.data.features:main"
spectralm-butina-sample = "spectralm.data.sampling:main"
spectralm-plot-selection = "spectralm.analysis.visualization:main"
spectralm-train = "spectralm.training.train:main"
spectralm-predict = "spectralm.inference.predict:main"
spectralm-evaluate = "spectralm.evaluation.metrics:main"
spectralm-render-demo = "spectralm.spectra.render:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
